fixed overflow issue when viewing from mobile in landscape mode

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,10 +1,10 @@
 .main__content {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    height: 90vh;
+    justify-content: space-between;
+    min-height: 80vh;
     max-width: 100vw;
-    margin-inline: 6vw;
+    margin: 6vw;
 }
 
 .main__hero {
